# CuteFaceSwap

./: CMakeLists.txt  README.md  facecropper.cpp  facecropper.h  facedetector.cpp  facedetector.h  faceswapfilter.cpp  faceswapfilter.h  faceswapfilterrunnable.cpp  faceswapfilterrunnable.h  imagemerger.cpp  imagemerger.h  main.cpp  resources.qrc
qml/: CameraSelectionBox.qml  main.qml
